# Qt-Projects

./: README.md
medium_projects/PaintQt/: CMakeLists.txt  CMakeUserPresets.json  paintwidget.h
moyens_projets/PaintQt/: .gitignore  CMakeLists.txt  main.cpp  paintwidget.cpp  paintwidget.h
small_projects/01_hello_qt/: .gitignore  CMakeLists.tkt  CMakeLists.txt  CMakeUserPresets.json  main.cpp
small_projects/InteractiveQt/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  main.cpp
